Swagger Ui fixed
