# routes/authorRoutes.js
@@ -3,21 +3,41 @@ const router = express.Router();
 const controller = require('../controllers/authorController');
 const validate = require('../middleware/validate');
 
-//#swagger.tags = ['Author'] 
-//#swagger.path = '/authors'
 router.get(
     '/', 
+    //#swagger.tags = ['Author']
     //#swagger.summary = 'Get all authors'
     // #swagger.path = '/api/authors'
     controller.getAll);
 
+router.get(
+    '/:id',
+    // #swagger.tags = ['Author']
+    // #swagger.summary = 'Get an author by ID'
+    // #swagger.path = '/api/authors{id}'
+    controller.getOne);
 
-// #swagger.tags = ['Author']
-//#swagger.path = '/authors'
+
 router.post(
     '/', 
+    // #swagger.tags = ['Author']
     //#swagger.summary = 'Post an authors'
     // #swagger.path = '/api/authors'
-    validate.author, controller.create);
+    controller.create);
+
+router.put(
+    '/:id', 
+    // #swagger.tags = ['Author']
+    //#swagger.summary = 'Update an author'
+    // #swagger.path = '/api/authors{id}'
+    validate.author, controller.update);
+
+
+router.delete(
+    '/:id', 
+    // #swagger.tags = ['Author']
+    //#swagger.summary = 'Delete an author'
+    // #swagger.path = '/api/authors{id}'
+    validate.author, controller.remove);
 
 module.exports = router;
